<resources>
    <string name="app_name">LoginActivityFireBase</string>
    <string name="email">email</string>
    <string name="passwords">password</string>
    <string name="login">login</string>
    <string name="create_new_account">create new account?</string>
    <string name="already_have_an_account_login">already</string>
    <string name="register">register\'</string>
    <string name="phone_number">phone_number</string>
    <string name="confirm_password">password</string>
    <string name="fullname">fullname</string>

    <string name="logouut">Logout</string>
    <string name="already_have_an_acc_login">Already have an account?Login</string>
    <string name="forgot_password">Forgot PassWord?</string>
    <string name="name">Name</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="contact">Contact</string>
    <string name="add_image">Add Image</string>
    <string name="details">Details</string>
    <string name="save">Save</string>
    <string name="_0_number_added">0 number added</string>
    <string name="button1">Button1</string>
    <string name="button">Button</string>
</resources>